# FanslySync

./: .gitignore  DEVELOPERS.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml  deploy.yml
src-tauri/: Cargo.toml  install.sh  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/config/: mod.rs
src-tauri/src/commands/fansly/: mod.rs
src-tauri/src/commands/utils/: mod.rs
src-tauri/src/handlers/: mod.rs
src-tauri/src/handlers/config/: mod.rs
src-tauri/src/handlers/fansly/: mod.rs
src-tauri/src/structs/: mod.rs
src/lib/: types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/home/: +page.svelte
src/routes/setup/: +page.svelte
