[package]
name = "app"
version = "0.1.6"
description = "A Tauri App"
authors = ["SticksDev"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.4.1", features = [] }
dirs = "5.0.1"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
lazy_static = "1.5.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-macros = "2.3.0"
tauri-plugin-os = { version = "2.2.1" }
tauri-plugin-dialog = { version = "2.2.1" }
tauri-plugin-clipboard-manager = { version = "2.2.1" }
tauri-plugin-notification = { version = "2.2.1" }
tauri-plugin-updater = { version = "2.2.1" }
tauri-plugin-log =  { version = "2.2.1" }
log = "0.4.27"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.3.0"
